Fix modal overlap with header

--- a/client/src/assets/componentStyles/headerComponent.css
+++ b/client/src/assets/componentStyles/headerComponent.css
@@ -6,7 +6,7 @@
     height: 70px;
     color: rgb(0, 0, 0);
     text-align: center;
-    z-index: 9999999999 !important;
+    /* z-index: 9999999999 !important; */
     position: fixed;
     box-shadow: 0 -6px 10px 5px rgba(0,0,0,0.5);
 }
@@ -143,7 +143,7 @@ header h2:hover {
     left: 0;
     margin-top: -10px;
     position: fixed;
-    z-index: 99999999999999999999999999999999999999999999999999999 !important;
+    /* z-index: 99999999999999999999999999999999999999999999999999999 !important; */
     background-color: rgb(255, 255, 255);
     overflow: scroll;
     transition: 0.5s;
