--- a/client/src/assets/componentStyles/modalComponent.css
+++ b/client/src/assets/componentStyles/modalComponent.css
@@ -25,6 +25,7 @@
 }
 
 .mobileModal {
+    height: 80% !important;
     width: 70% !important;
 }
 
